<resources>
    <string name="app_name">ChattingDemo</string>
    <string name="sign_up">用户注册</string>
    <string name="user_name">用户名:</string>
    <string name="user_password">密码:</string>
    <string name="username_hint">username</string>
    <string name="password_hint">Password</string>
    <string name="login_txt">登录</string>
    <string name="cancel_txt">取消</string>
    <string name="user_sign_up">用户注册</string>
    <string name="back_button">返回</string>
    <string name="sign_up_button">注册</string>
    <string name="send_msg">发送</string>
    <string name="save_password">记住密码</string>
    <string name="auto_login">自动登录</string>
</resources>
